fixed bodyparser issue

--- a/public/css/generic-style.css
+++ b/public/css/generic-style.css
@@ -61,7 +61,7 @@ li.mdl-list__item{
     width: 25% ;
     margin-top: 20px;
     left: 36%;
-    background-color: #59CD90;
+    background-color: green;
     color: white;
 
 
